Fixed dev manual buttons alignement
Fixed dev manual button links alignement (increase min-width for longer text)

--- a/themes/grass/assets/css/style.css
+++ b/themes/grass/assets/css/style.css
@@ -114,6 +114,10 @@ a.nws:hover {
   display: inline-block;
   min-width: 45%;
 }
+.mwl-l {
+  display: inline-block;
+  min-width:65%;
+}
 .version li {
   margin-bottom: 9px;
 }
